# News_Blog

./: LICENSE  README.md  requirements.txt
agent-wrapper/: agent_wrapper.py  server.config
backend-server/: .gitignore  index.js  netlify.toml  package-lock.json  package.json  server.config.js
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  BlogCard.css  BlogCard.js  SearchBar.css  SearchBar.js  index.css
news-source/: requirements.txt  scrapper.config  scrapper.py  server.config  server.py
news_flow/: README.md  pyproject.toml
news_flow/db/: chroma.sqlite3
news_flow/src/news_flow/: agent_wrapper.py  main.py
news_flow/src/news_flow/crews/NER_crew/: NER_crew.py
news_flow/src/news_flow/crews/NER_crew/config/: agents.yaml  tasks.yaml
news_flow/src/news_flow/crews/Summarise_crew/: Summarise_crew.py
news_flow/src/news_flow/crews/Summarise_crew/config/: agents.yaml  tasks.yaml
watcher/: scrapper.py
